--- a/assets/styles/utility/_sticker.scss
+++ b/assets/styles/utility/_sticker.scss
@@ -1,12 +1,8 @@
 .sticker {
-    border: solid 8px var(--celeste);
-    box-shadow: 0px 2px 2px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: -16px;
-    right: -16px;
-    height: 72px;
-    width: 72px;
-    padding: 12px;
+    top: 8px;
+    right: 8px;
     border-radius: 1000px;
     -webkit-border-radius: 1000px;
     -moz-border-radius: 1000px;
@@ -28,10 +24,7 @@
 .sticker > * {
     display: block;
 }
-.sticker--zoom {
-    background-color: var(--purple);
-}
 
 .sticker--in-person {
-    background-color: var(--yellow);
+    background-color: var(--celeste);
 }
